// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonContainer Render snapshot of container in each possible position 1`] = `
<div
  className="w-full flex flex-row rounded-md space-x-4 p-4 bg-gray-50 dark:bg-gray-900 justify-start"
>
  Some content
</div>
`;

exports[`ButtonContainer Render snapshot of container in each possible position 2`] = `
<div
  className="w-full flex flex-row rounded-md space-x-4 p-4 bg-gray-50 dark:bg-gray-900 justify-end"
>
  Some content
</div>
`;

exports[`ButtonContainer Render snapshot of container in each possible position 3`] = `
<div
  className="w-full flex flex-row rounded-md space-x-4 p-4 bg-gray-50 dark:bg-gray-900 justify-center"
>
  Some content
</div>
`;

exports[`ButtonContainer With custom class 1`] = `
<div
  className="w-full flex flex-row rounded-md space-x-4 p-4 bg-gray-50 dark:bg-gray-900 justify-end custom-class"
>
  Any content
</div>
`;
